--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.10
 astroid==2.4.2
 beautifulsoup4==4.9.1
+bootstrap4==0.1.0
 config==0.3.9
 confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
